Fix spacing issue and email

--- a/main.less
+++ b/main.less
@@ -28,13 +28,12 @@ h1, h2, h3, h4, h5, h6 {
 
 #wrapper {
 	background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.7));
-
 	width: 100%;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: space-between;
 
 	#message {
 		font-size: 70px;
@@ -42,11 +41,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #banner {
-	// margin-bottom: 100px;
+	margin-top: 100px;
 }
 
 #contact {
-	// margin: 30px;
+	margin-bottom: 50px;
+	
 	a {
 		// color: #fff;
 		color: @text-color;
@@ -59,21 +59,10 @@ h1, h2, h3, h4, h5, h6 {
 	}
 
 	hr {
-		border: 1px solid @text-color;
+		border: 0px;
+		height: 2px !important;
+		background-color: @text-color;
 		width: 100px;
+		height: 0px;
 	}
-	// text-align: center;
-	// a {
-	// 	margin: 0 10px;
-	// 	i {
-	// 		height: 50px;
-	// 		width: 50px;
-	// 		line-height: 50px;
-	// 		border-radius: 50%;
-	// 		border: 2px solid @text-color;
-	// 		display: inline-block;
-	// 		color: @text-color;
-	// 		font-size: 30px;
-	// 	}
-	// }
 }
